standFMの画面を実装

--- a/tutorial/tutorial/Main/Base.lproj/Main.storyboard
+++ b/tutorial/tutorial/Main/Base.lproj/Main.storyboard
@@ -48,16 +48,31 @@
                                     <segue destination="sIL-db-NGk" kind="show" id="nQu-56-KxE"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1j6-h5-kP6">
+                                <rect key="frame" x="147" y="598" width="120" height="31"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="M9r-a3-9sY"/>
+                                </constraints>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="standFM"/>
+                                <connections>
+                                    <segue destination="vrg-AR-Tu3" kind="show" id="WdG-UH-1vw"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="1j6-h5-kP6" firstAttribute="top" secondItem="PgF-q9-Yuq" secondAttribute="bottom" constant="70" id="2Sg-3P-fWd"/>
                             <constraint firstItem="VFQ-hF-eMh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5jr-Fy-YCG"/>
                             <constraint firstItem="PgF-q9-Yuq" firstAttribute="top" secondItem="xGT-HN-u6C" secondAttribute="bottom" constant="70" id="Crk-l1-Ri0"/>
                             <constraint firstItem="PgF-q9-Yuq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="F5h-fX-MAA"/>
                             <constraint firstItem="xGT-HN-u6C" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PSl-Pk-OtF"/>
                             <constraint firstItem="VFQ-hF-eMh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="207" id="Tjq-XX-WU4"/>
                             <constraint firstItem="xGT-HN-u6C" firstAttribute="top" secondItem="VFQ-hF-eMh" secondAttribute="bottom" constant="80" id="bei-1Q-kjX"/>
+                            <constraint firstItem="1j6-h5-kP6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qTl-Gb-Lj0"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="deL-k4-Yvb"/>
@@ -86,6 +101,16 @@
             </objects>
             <point key="canvasLocation" x="1515" y="230"/>
         </scene>
+        <!--standFM-->
+        <scene sceneID="hjO-Pf-s7W">
+            <objects>
+                <viewControllerPlaceholder storyboardName="standFM" id="vrg-AR-Tu3" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="B1w-cq-p0J"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xLc-sX-cEf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1506" y="320"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="P5h-gX-4pU">
             <objects>
@@ -94,6 +119,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="7e0-mE-gF5">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <navigationBarAppearance key="scrollEdgeAppearance">
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </navigationBarAppearance>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
