--- a/tutorial/tutorial/Copy/YouTube/Controller/YouTube.storyboard
+++ b/tutorial/tutorial/Copy/YouTube/Controller/YouTube.storyboard
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -530,9 +531,6 @@
                                     <constraint firstAttribute="height" constant="180" id="dYx-Ig-K9s"/>
                                 </constraints>
                             </stackView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="videoView" translatesAutoresizingMaskIntoConstraints="NO" id="G72-0j-51U">
-                                <rect key="frame" x="0.0" y="300" width="375" height="317"/>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="急上昇動画" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u2K-qs-dsu">
                                 <rect key="frame" x="10" y="261.5" width="128" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -546,25 +544,29 @@
                                     <constraint firstAttribute="height" constant="0.5" id="Bs4-FD-bJ1"/>
                                 </constraints>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="cMH-Zp-Dse">
+                                <rect key="frame" x="0.0" y="299" width="375" height="318"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ijz-Lx-gvT"/>
                         <color key="backgroundColor" red="0.10980392160000001" green="0.10980392160000001" blue="0.1176470588" alpha="0.89680430430000002" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="u2K-qs-dsu" firstAttribute="leading" secondItem="ijz-Lx-gvT" secondAttribute="leading" constant="10" id="0FY-SB-p9G"/>
-                            <constraint firstItem="G72-0j-51U" firstAttribute="leading" secondItem="ijz-Lx-gvT" secondAttribute="leading" id="0Ff-5v-8md"/>
+                            <constraint firstItem="i3d-k9-e29" firstAttribute="top" secondItem="cMH-Zp-Dse" secondAttribute="bottom" id="0rq-P7-0IQ"/>
                             <constraint firstItem="TbE-cf-zRb" firstAttribute="top" secondItem="ijz-Lx-gvT" secondAttribute="top" id="0xY-gM-UBC"/>
-                            <constraint firstItem="i3d-k9-e29" firstAttribute="top" secondItem="G72-0j-51U" secondAttribute="bottom" id="4iF-fN-jWE"/>
                             <constraint firstItem="ijz-Lx-gvT" firstAttribute="trailing" secondItem="u2K-qs-dsu" secondAttribute="trailing" constant="237" id="7ir-yK-Fue"/>
                             <constraint firstItem="i3d-k9-e29" firstAttribute="leading" secondItem="Cqf-8T-gWv" secondAttribute="leading" constant="5" id="82R-mm-KeA"/>
-                            <constraint firstItem="G72-0j-51U" firstAttribute="trailing" secondItem="ijz-Lx-gvT" secondAttribute="trailing" id="9V1-bS-K0K"/>
+                            <constraint firstItem="cMH-Zp-Dse" firstAttribute="trailing" secondItem="ijz-Lx-gvT" secondAttribute="trailing" id="Dhp-p9-O4D"/>
                             <constraint firstItem="i3d-k9-e29" firstAttribute="trailing" secondItem="ijz-Lx-gvT" secondAttribute="trailing" constant="-5" id="EML-iG-O0F"/>
                             <constraint firstItem="tTG-US-GO7" firstAttribute="trailing" secondItem="ijz-Lx-gvT" secondAttribute="trailing" constant="-10" id="EV0-gx-6ua"/>
                             <constraint firstItem="tTG-US-GO7" firstAttribute="top" secondItem="TbE-cf-zRb" secondAttribute="bottom" constant="20" id="M4d-gr-kWV"/>
-                            <constraint firstItem="G72-0j-51U" firstAttribute="top" secondItem="tTG-US-GO7" secondAttribute="bottom" constant="70" id="MW0-oS-NQz"/>
-                            <constraint firstItem="G72-0j-51U" firstAttribute="top" secondItem="u2K-qs-dsu" secondAttribute="bottom" constant="18" id="NNk-ef-ENz"/>
-                            <constraint firstItem="u2K-qs-dsu" firstAttribute="top" secondItem="ckA-Nt-7N0" secondAttribute="bottom" constant="12" id="V2n-V1-oTX"/>
+                            <constraint firstItem="u2K-qs-dsu" firstAttribute="top" secondItem="ckA-Nt-7N0" secondAttribute="bottom" constant="12" id="Rh2-tz-9Ex"/>
                             <constraint firstItem="TbE-cf-zRb" firstAttribute="trailing" secondItem="ijz-Lx-gvT" secondAttribute="trailing" id="Vh8-Dw-Tn9"/>
                             <constraint firstItem="ckA-Nt-7N0" firstAttribute="leading" secondItem="ijz-Lx-gvT" secondAttribute="leading" id="Ya3-Xs-Lie"/>
+                            <constraint firstItem="cMH-Zp-Dse" firstAttribute="top" secondItem="u2K-qs-dsu" secondAttribute="bottom" constant="17" id="Z89-W5-03v"/>
+                            <constraint firstItem="ckA-Nt-7N0" firstAttribute="top" secondItem="tTG-US-GO7" secondAttribute="bottom" constant="19" id="ZZk-Dm-kwd"/>
+                            <constraint firstItem="cMH-Zp-Dse" firstAttribute="leading" secondItem="ijz-Lx-gvT" secondAttribute="leading" id="ceY-i6-yXm"/>
                             <constraint firstItem="tTG-US-GO7" firstAttribute="leading" secondItem="ijz-Lx-gvT" secondAttribute="leading" constant="10" id="dXZ-VK-pMd"/>
                             <constraint firstItem="tTG-US-GO7" firstAttribute="leading" secondItem="ijz-Lx-gvT" secondAttribute="leading" constant="10" id="fYz-KX-dkJ"/>
                             <constraint firstItem="TbE-cf-zRb" firstAttribute="leading" secondItem="ijz-Lx-gvT" secondAttribute="leading" id="qQn-U3-Hjy"/>
@@ -574,6 +576,9 @@
                         </constraints>
                     </view>
                     <nil key="simulatedTopBarMetrics"/>
+                    <connections>
+                        <outlet property="videoTableView" destination="cMH-Zp-Dse" id="WkF-y9-gd9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aLA-Yh-3fu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -596,6 +601,8 @@
         <image name="plus" width="94" height="76"/>
         <image name="sports" width="58" height="58"/>
         <image name="up" width="50" height="62"/>
-        <image name="videoView" width="746" height="614"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
