--- a/tutorial/tutorial/Copy/standFM/ViewController/standFM.storyboard
+++ b/tutorial/tutorial/Copy/standFM/ViewController/standFM.storyboard
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -74,8 +75,9 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="k2a-tY-bSQ">
                                         <rect key="frame" x="251.5" y="0.0" width="68.5" height="45"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ベル" translatesAutoresizingMaskIntoConstraints="NO" id="ZTv-Iu-FvZ">
-                                                <rect key="frame" x="0.0" y="0.0" width="68.5" height="20"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bell" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ZTv-Iu-FvZ">
+                                                <rect key="frame" x="0.0" y="0.0" width="68.5" height="19.5"/>
+                                                <color key="tintColor" systemColor="labelColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="20" id="WcS-0c-Qsm"/>
                                                 </constraints>
@@ -123,23 +125,24 @@
                                     <constraint firstAttribute="height" constant="0.5" id="9EB-9R-fS0"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fm-list" translatesAutoresizingMaskIntoConstraints="NO" id="JYI-jI-tZW">
-                                <rect key="frame" x="0.0" y="88" width="414" height="720.5"/>
-                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="KPH-GJ-PBJ">
+                                <rect key="frame" x="0.0" y="98" width="414" height="710.5"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="65m-ll-hVt" firstAttribute="top" secondItem="KPH-GJ-PBJ" secondAttribute="bottom" id="2tZ-r0-feM"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="ldT-F1-lrz" secondAttribute="trailing" constant="5" id="AA0-09-O4b"/>
+                            <constraint firstItem="KPH-GJ-PBJ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="IyW-Uo-9A1"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="KPH-GJ-PBJ" secondAttribute="trailing" id="Phs-Cc-yqU"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="ldT-F1-lrz" secondAttribute="bottom" id="SDn-Zf-tKW"/>
+                            <constraint firstItem="KPH-GJ-PBJ" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="10" id="TNL-mR-VEr"/>
                             <constraint firstItem="ldT-F1-lrz" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="5" id="WfV-ck-Wgh"/>
                             <constraint firstItem="65m-ll-hVt" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" id="dgG-xy-eKg"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="JYI-jI-tZW" secondAttribute="trailing" id="mL3-6g-wxu"/>
-                            <constraint firstItem="65m-ll-hVt" firstAttribute="top" secondItem="JYI-jI-tZW" secondAttribute="bottom" id="pSO-ca-qgm"/>
-                            <constraint firstItem="JYI-jI-tZW" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="r44-Y4-u0s"/>
                             <constraint firstItem="ldT-F1-lrz" firstAttribute="top" secondItem="65m-ll-hVt" secondAttribute="bottom" constant="8" id="sHC-QR-Tj6"/>
                             <constraint firstAttribute="trailing" secondItem="65m-ll-hVt" secondAttribute="trailing" id="tKV-N1-YyL"/>
-                            <constraint firstItem="JYI-jI-tZW" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="yKg-1m-bNG"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="ライブ放送" id="eDs-of-ENo">
@@ -148,6 +151,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="liveListTableView" destination="KPH-GJ-PBJ" id="35t-IY-Kpl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -155,12 +161,17 @@
         </scene>
     </scenes>
     <resources>
+        <image name="bell" catalog="system" width="128" height="124"/>
         <image name="chevron.backward" catalog="system" width="96" height="128"/>
-        <image name="fm-list" width="1040" height="1546"/>
         <image name="fm-plus" width="138" height="112"/>
         <image name="follow" width="84" height="76"/>
-        <image name="ベル" width="48" height="48"/>
         <image name="ホームアイコン" width="48" height="48"/>
         <image name="人物アイコン" width="48" height="48"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
