--- a/tutorial/tutorial/Main/Base.lproj/Main.storyboard
+++ b/tutorial/tutorial/Main/Base.lproj/Main.storyboard
@@ -75,6 +75,19 @@
                                     <segue destination="1pJ-4H-R9H" kind="show" id="nNd-qt-8rD"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UFO-vX-Lzn">
+                                <rect key="frame" x="147" y="503" width="120" height="31"/>
+                                <color key="backgroundColor" red="0.55634254220000001" green="0.97934550050000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="znV-DD-ihl"/>
+                                </constraints>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="QiitaClient"/>
+                                <connections>
+                                    <segue destination="sED-Bi-20b" kind="show" id="ckc-na-qYV"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -83,11 +96,13 @@
                             <constraint firstItem="VFQ-hF-eMh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5jr-Fy-YCG"/>
                             <constraint firstItem="PgF-q9-Yuq" firstAttribute="top" secondItem="xGT-HN-u6C" secondAttribute="bottom" constant="30" id="Crk-l1-Ri0"/>
                             <constraint firstItem="PgF-q9-Yuq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="F5h-fX-MAA"/>
+                            <constraint firstItem="UFO-vX-Lzn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Obz-Ho-hDy"/>
                             <constraint firstItem="xGT-HN-u6C" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PSl-Pk-OtF"/>
                             <constraint firstItem="VFQ-hF-eMh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="Tjq-XX-WU4"/>
                             <constraint firstItem="xGT-HN-u6C" firstAttribute="top" secondItem="VFQ-hF-eMh" secondAttribute="bottom" constant="50" id="bei-1Q-kjX"/>
                             <constraint firstItem="ykL-zC-giV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hGh-bn-EuT"/>
                             <constraint firstItem="ykL-zC-giV" firstAttribute="top" secondItem="1j6-h5-kP6" secondAttribute="bottom" constant="30" id="mOK-dY-XbQ"/>
+                            <constraint firstItem="UFO-vX-Lzn" firstAttribute="top" secondItem="ykL-zC-giV" secondAttribute="bottom" constant="30" id="pzj-hT-dJc"/>
                             <constraint firstItem="1j6-h5-kP6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qTl-Gb-Lj0"/>
                         </constraints>
                     </view>
@@ -136,6 +151,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cK1-qF-Ve6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1494" y="450"/>
+        </scene>
+        <!--QiitaClient-->
+        <scene sceneID="pez-mh-r0G">
+            <objects>
+                <viewControllerPlaceholder storyboardName="QiitaClient" id="sED-Bi-20b" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="I6C-IU-sse"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qhZ-AM-WIr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1446" y="530"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="P5h-gX-4pU">
