--- a/tutorial/tutorial/STYLEHAUS/View/ListTableViewCell.xib
+++ b/tutorial/tutorial/STYLEHAUS/View/ListTableViewCell.xib
@@ -18,7 +18,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="376" height="148"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ydZ-BI-8Z4">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ydZ-BI-8Z4">
                         <rect key="frame" x="20" y="0.0" width="120" height="120"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="120" id="Aqo-RX-5lB"/>
