--- a/tutorial/tutorial/Main/Base.lproj/Main.storyboard
+++ b/tutorial/tutorial/Main/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -88,13 +89,28 @@
                                     <segue destination="sED-Bi-20b" kind="show" id="ckc-na-qYV"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gG6-kV-9eX">
+                                <rect key="frame" x="147" y="564" width="120" height="31"/>
+                                <color key="backgroundColor" systemColor="systemTealColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="kAr-Ii-dej"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="realmTodo"/>
+                                <connections>
+                                    <segue destination="W6t-8s-3ha" kind="show" id="Izg-Cd-7sx"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="1j6-h5-kP6" firstAttribute="top" secondItem="PgF-q9-Yuq" secondAttribute="bottom" constant="30" id="2Sg-3P-fWd"/>
                             <constraint firstItem="VFQ-hF-eMh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5jr-Fy-YCG"/>
+                            <constraint firstItem="gG6-kV-9eX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7Bz-nT-dl6"/>
                             <constraint firstItem="PgF-q9-Yuq" firstAttribute="top" secondItem="xGT-HN-u6C" secondAttribute="bottom" constant="30" id="Crk-l1-Ri0"/>
+                            <constraint firstItem="gG6-kV-9eX" firstAttribute="top" secondItem="UFO-vX-Lzn" secondAttribute="bottom" constant="30" id="DOS-Ls-R8w"/>
                             <constraint firstItem="PgF-q9-Yuq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="F5h-fX-MAA"/>
                             <constraint firstItem="UFO-vX-Lzn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Obz-Ho-hDy"/>
                             <constraint firstItem="xGT-HN-u6C" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PSl-Pk-OtF"/>
@@ -162,6 +178,16 @@
             </objects>
             <point key="canvasLocation" x="1446" y="530"/>
         </scene>
+        <!--Todo-->
+        <scene sceneID="TjW-WW-iQe">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Todo" id="W6t-8s-3ha" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="FBq-oi-f0u"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="899-KC-w2T" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1468" y="601"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="P5h-gX-4pU">
             <objects>
@@ -196,5 +222,8 @@
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemTealColor">
+            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
